# EGC

./: README.md
Framework-EGC-master_MacOS/: .dir-locals.el  .gitignore
Framework-EGC-master_MacOS/curs/curs_01/: README.md
Framework-EGC-master_MacOS/curs/curs_02/: README.md
Framework-EGC-master_MacOS/curs/curs_03/: README.md
Framework-EGC-master_MacOS/curs/curs_04/: README.md
Framework-EGC-master_MacOS/lab-framework/: CMakeLists.txt
Framework-EGC-master_MacOS/lab-framework/src/: CMakeLists.txt  main.cpp
Framework-EGC-master_MacOS/lab-framework/src/defines/: errors.hpp  utils.h
Framework-EGC-master_MacOS/lab-framework/src/defines/Component/: Camera.h  Transform.h
Framework-EGC-master_MacOS/lab-framework/src/engine/: Engine.cpp  Engine.h  World.cpp  World.h
Framework-EGC-master_MacOS/lab-framework/src/engine/component/: CameraInput.cpp  CameraInput.h  SceneInput.cpp  SceneInput.h  SimpleScene.cpp  SimpleScene.h
Framework-EGC-master_MacOS/lab-framework/src/engine/gpu/: GPUBuffers.cpp  GPUBuffers.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
Framework-EGC-master_MacOS/lab-framework/src/engine/managers/: ResourcePath.h  TextureManager.cpp
Framework-EGC-master_MacOS/lab-framework/src/engine/window/: InputController.cpp  InputController.h  InputWindow.h  WindowCallbacks.cpp  WindowCallbacks.h  WindowObject.cpp  WindowObject.h
Framework-EGC-master_MacOS/lab-framework/src/hws/: hwlist.hpp
Framework-EGC-master_MacOS/lab-framework/src/labs/: lablist.hpp
Framework-EGC-master_MacOS/lab-framework/src/labs/lab1/: lab1.cpp  lab1.hpp  object.hpp
Framework-EGC-master_MacOS/lab-framework/src/labs/lab2/: lab2.cpp  lab2.hpp
Framework-EGC-master_MacOS/lab-framework/src/playground/: CMakeLists.txt  playground.cpp
Framework-EGC-master_Windows/Source/: Main.cpp
Framework-EGC-master_Windows/Visual Studio/: Framework_EGC.vcxproj  Framework_EGC.vcxproj.filters
(+53 files in other folders)
